# parlez

./: .gitignore  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  e2e-destroy.yml  e2e-up.yml
app/: config.py  main.py
app/api/: schemas.py  translate.py
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 981397dd5e69_add_part_of_speech_and_unique_constraint.py  b6081f067a99_drop_english_meaning_from_vocab_tables.py  c4f2e1a0b3d5_update_pos_enum_add_gender.py  d0ab5a61c11f_create_initial_tables.py  e1f2a3b4c5d6_add_interjection_to_pos_enum.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  schemas.py  translate.py
backend/app/api/routes/: conjugation.py  sentences.py  tts.py  vocab.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/scripts/: mint_token.py
backend/tests/: package-lock.json  package.json  playwright.config.ts
backend/tests/integration/: conftest.py  test_api.py  test_translate.py  translate.spec.ts
backend/tests/unit/: test_translate.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Conjugation.tsx  Dashboard.tsx  Sentences.tsx  Translate.tsx  Vocabulary.tsx
infrastructure/: Pulumi.yaml  __main__.py  requirements.txt
infrastructure/db/: Pulumi.yaml  __main__.py  parlez-e2e.pub  pyproject.toml
infrastructure/e2e/: Pulumi.yaml  __main__.py  pyproject.toml
tests/unit/: test_translate.py
